syntax = "proto3";
package chainTracker;
import "google/protobuf/empty.proto";
option go_package = "chainTracker";

service ChainTrackerService {
    rpc GetLatestBlockNum (google.protobuf.Empty) returns (GetLatestBlockNumResponse ) {}
    rpc GetLatestBlockData (LatestBlockData) returns (LatestBlockDataResponse){}
}

message LatestBlockData {
    int64 fromBlock =1;
    int64 toBlock =2;
    int64 specificBlock =3;
}

message GetLatestBlockNumResponse {
    uint64 block =1;
    int64 timestamp =2;
}

message LatestBlockDataResponse {
    int64 latestBlock =1;
    repeated BlockStore requestedHashes  =2;
}

message BlockStore {
    int64 block =1;
    string hash =2;
}